# BiliController

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release.yml
src/: browser.rs  types.rs
