[package]
name = "bili_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
fantoccini = "0.17"
webbrowser = "0.8"
scraper = "0.18"
regex = "1.0"